added date validation on booking date/time and changed all booking endpoints to return a ResponseEntity contaning both object and response